--- a/src/home.css
+++ b/src/home.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100vh;
     /* Full height of the viewport */
     background-color: #f0f4f8;
     /* Light background color */
